syntax = "proto3";

option java_multiple_files = true;
option java_package = "klattice.msg";
option java_outer_classname = "KLApiProto";

package klattice.msg;

import "substrait/plan.proto";
import "substrait/type.proto";

message QueryDescriptor {
    Environment environ = 1;
    string query = 2;
}

message Environment {
    repeated Schema schemas = 1;
}

message Schema {
    uint64 schema_id = 1;
    string relName = 2;
    repeated Rel rels = 3;
}

message Plan {
    Environment environ = 1;
    substrait.Plan plan = 2;
}

message ExpandedPlan {
    bool has_error = 1;
    oneof result {
        Plan plan = 2;
        PlanDiagnostics diagnostics = 3;
    }
}

message PlanDiagnostics {
    string error_message = 1;
}

message Rel {
    uint32 schema_id = 1;
    string relName = 2;
    repeated Column columns = 3;
    uint64 estimated_rows = 4;
}

message Column {
    string columnName = 1;
    substrait.Type type = 2;
}

message Batch {
    repeated substrait.Type fieldTypes = 1;
    repeated string fieldNames = 2;
    repeated Row rows = 3;
}

message Row {
    repeated bytes fields = 1;
}

message PreparedQuery {
    bool has_error = 1;
    oneof result {
        Plan plan = 2;
        QueryDiagnostics diagnostics = 3;
    }
}

message QueryDiagnostics {
    string error_message = 1;
}
